unpackaged/main/default/objects/TransactionPayment__c/TransactionPayment__c.object-meta.xml
<CustomObject>
    <label>Transaction Payment</label>
    <nameField>
        <displayFormat>TP-{00000000}</displayFormat>
        <label>Transaction Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>