unpackaged/main/default/objects/TransactionPayment__c/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>