unpackaged/main/default/objects/TransactionPayment__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CC_MASTER</fullName>
                <label>Master</label>
            </value>
            <value>
                <fullName>CC_VISA</fullName>
                <label>Visa</label>
            </value>
            <value>
                <fullName>C_PAYPAL</fullName>
                <label>Paypal</label>
            </value>
            <value>
                <fullName>CC_AMEX</fullName>
                <label>Amex</label>
            </value>
            <value>
                <fullName>AEC</fullName>
                <label>American Express CZK</label>
            </value>
            <value>
                <fullName>AEE</fullName>
                <label>American Express EUR</label>
            </value>
            <value>
                <fullName>AEG</fullName>
                <label>American Express GPB</label>
            </value>
            <value>
                <fullName>AEH</fullName>
                <label>American Express HKD</label>
            </value>
            <value>
                <fullName>AEK</fullName>
                <label>American Express KRW</label>
            </value>
            <value>
                <fullName>AEM</fullName>
                <label>American Express MOP</label>
            </value>
            <value>
                <fullName>AER</fullName>
                <label>American Express RMB</label>
            </value>
            <value>
                <fullName>AEU</fullName>
                <label>American Express AED</label>
            </value>
            <value>
                <fullName>APH</fullName>
                <label>Alipay HKD</label>
            </value>
            <value>
                <fullName>APK</fullName>
                <label>Alipay KRW</label>
            </value>
            <value>
                <fullName>APM</fullName>
                <label>Alipay MOP</label>
            </value>
            <value>
                <fullName>APR</fullName>
                <label>Alipay RMB</label>
            </value>
            <value>
                <fullName>APU</fullName>
                <label>Alipay AED</label>
            </value>
            <value>
                <fullName>ARC</fullName>
                <label>Paid Deposit CZK</label>
            </value>
            <value>
                <fullName>ARE</fullName>
                <label>paid deposits EUR</label>
            </value>
            <value>
                <fullName>ARG</fullName>
                <label>paid Deposit GPB</label>
            </value>
            <value>
                <fullName>ARH</fullName>
                <label>Paid Deposit HKD</label>
            </value>
            <value>
                <fullName>ARK</fullName>
                <label>Paid Deposit KRW</label>
            </value>
            <value>
                <fullName>ARM</fullName>
                <label>Paid Deposit MOP</label>
            </value>
            <value>
                <fullName>ARR</fullName>
                <label>Paid Deposit RMB</label>
            </value>
            <value>
                <fullName>ARU</fullName>
                <label>Paid deposit AED</label>
            </value>
            <value>
                <fullName>AVC</fullName>
                <label>issued CZK</label>
            </value>
            <value>
                <fullName>AVE</fullName>
                <label>issued EUR</label>
            </value>
            <value>
                <fullName>AVG</fullName>
                <label>issued GPB</label>
            </value>
            <value>
                <fullName>AVR</fullName>
                <label>input EUR</label>
            </value>
            <value>
                <fullName>BCK</fullName>
                <label>BC Card KRW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>