unpackaged/main/default/objects/TransactionPayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PaidAmount__c</columns>
    <columns>PaymentMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>